<resources>
    <string name="app_name">ConvidadosAtual</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_all_guests">Todos</string>
    <string name="menu_presents">Presentes</string>
    <string name="menu_absents">Ausentes</string>

    <string name="name">Nome</string>
    <string name="confirmation">Confirmação</string>
    <string name="button_text_save">Salvar</string>
    <string name="button_text_presents">Presente</string>
    <string name="button_text_absents">Ausente</string>
    <string name="guest_title_remove">Remoção de convidado</string>
    <string name="guest_mensage_remove">Deseja remover convidado da lista?</string>
    <string name="guest_remove">Remover</string>
    <string name="guest_cancel">Cancelar</string>

</resources>